--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -47,7 +47,7 @@ select, input, textarea{
 	@apply h-10 text-sm text-gray-2 box-border border border-green-w50 rounded px-2.5;
 }
 select:focus, input:focus{
-	@apply outline-none border border-solid border-green-Default
+	@apply outline-none border border-solid border-green
 }
 
 /* // 必填 * */
@@ -81,19 +81,19 @@ select:focus, input:focus{
 	@apply m-0
 }
 .btn_primary--orange{
-	@apply w-36 h-9  bg-orange-Default text-gray-1 flex items-center justify-center cursor-pointer tracking-wider rounded-3xl font-normal /*font-weight: 400;  */
+	@apply w-36 h-9  bg-orange text-gray-1 flex items-center justify-center cursor-pointer tracking-wider rounded-3xl font-normal /*font-weight: 400;  */
 }
 .btn_primary--green{
-	@apply  w-36 h-9 bg-green-Default text-gray-1 flex items-center justify-center cursor-pointer tracking-wider rounded-3xl font-normal
+	@apply  w-36 h-9 bg-green text-gray-1 flex items-center justify-center cursor-pointer tracking-wider rounded-3xl font-normal
 }
 .btn_secondary-orange{
-	@apply w-36 h-9 bg-white border border-orange-Default text-gray-1 flex items-center justify-center cursor-pointer tracking-wider rounded-3xl font-normal /*font-weight: 400;  */
+	@apply w-36 h-9 bg-white border border-orange text-gray-1 flex items-center justify-center cursor-pointer tracking-wider rounded-3xl font-normal /*font-weight: 400;  */
 } 
 .title{
 	@apply h-10 box-border w-full px-14 lg:px-7 shadow-layer2 bg-white fixed top-0  left-48 lg:left-36 sm:top-16 sm:left-0 z-20 leading-12
 }
 .unread {
-	@apply w-4.5 h-4.5 min-w-4.5 text-center text-white bg-orange-Default rounded-full
+	@apply w-4.5 h-4.5 min-w-4.5 text-center text-white bg-orange rounded-full
 }
 .chat_source {
 	@apply text-sm inline-block text-gray-2 bg-orange-w20 m-1 px-3.5 py-1 rounded-tl-20 rounded-br-20 rounded-tr-3 rounded-bl-3;
@@ -106,5 +106,5 @@ select:focus, input:focus{
 
 /* form */
 .search_tag{
-	@apply  cursor-pointer text-sm text-gray-1 rounded-20 mx-1.5 my-0 px-3.5 py-1.5 border border-solid border-green-Default 
+	@apply  cursor-pointer text-sm text-gray-1 rounded-20 mx-1.5 my-0 px-3.5 py-1.5 border border-solid border-green 
 }
